Updated GJson to be able to be instanced, while still providing default singletons for basic and pretty versions.